# gems

./: .coverage  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GITHUB_PUSH_GUIDE.md  LICENSE  README.md  RELEASE_v0.1.md  SKILL.md  VERSION_v0.1_SUMMARY.md  env.example  gems-v0.1.bundle  index.js  package.json  pyproject.toml  requirements.txt  start.sh  test_pagination.py  test_report.html
apps/cli/: main.py
apps/servers/: main.py
apps/web/: index.html
assets/: example_stocks.json  report_template.md
docs/: TDX_INTEGRATION.md
references/: api_reference.md  quick_reference.md  stock_codes.md  valuation_guide.md
scripts/: analyze_a_stock.py  analyze_stock.py  batch_analyze.py  gems-analyzer  search_stock.py  value_investing_demo.py
src/: __init__.py  cli.py
src/analysis/: __init__.py  value_investing.py
src/data_sources/: __init__.py  akshare_source.py  data_manager.py  tushare_source.py
src/gems/: __init__.py  agent.py  api.py  cli.py  config.py  error_handling.py  exceptions.py  logging.py  mock_model.py  model.py  prompts.py  schemas.py
src/gems/cache/: __init__.py  base.py  manager.py  storage.py
src/gems/data_sources/: __init__.py  akshare_source.py  availability.py  base.py  manager.py  tdx_source.py  yfinance_source.py
src/gems/gli/: __init__.py  logger.py  terminal.py
src/gems/logging/: __init__.py  core.py
src/gems/output/: __init__.py  core.py  logger.py
src/gems/tools/: __init__.py  analysis.py  api.py  api.py.backup  constants.py  filings.py  financials.py  tdx_api.py
src/gems/ui/: __init__.py  terminal.py
src/gems/ui/components/: __init__.py  answer_panel.py  header.py  progress.py  task_list.py  tool_output.py
src/gems/ui/layouts/: __init__.py  main.py
src/gems/ui/themes/: __init__.py  base.py  opencode.py
src/gems/ui/utils/: __init__.py  formatting.py  progress.py
src/gems/utils/: intro.py  logger.py  rich_ui.py  ui.py
src/utils/: __init__.py  logger.py
tests/: mock_model.py  test_api_connection.py  test_api_refactored.py  test_cache.py  test_cache_bypass.py  test_cache_debug.py  test_cache_debug_detailed.py  test_cache_miss.py  test_cache_simple.py  test_cli_cache.py  test_config.py  test_core_modules.py  test_e2e_cache.py  test_end_to_end.py  test_mock_model.py  test_real_analysis.py  test_regex.py  test_stock_confirmation.py  test_stock_confirmation_debug.py
web/: server.py
