[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gems-analyzer"
version = "2.0.0"
description = "基于价值投资理念的AI投资分析系统 - Kimi CLI Skill"
authors = [{name = "Gems Team", email = "gems@example.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["investment", "value-investing", "ai", "financial-analysis", "chinese-stocks", "kimi-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.3.27",
    "langchain-deepseek>=0.1.0",
    "langchain-qwq>=0.2.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "akshare>=1.15.0",
    "dashscope>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/xiaoCarl/gems-analyzer"
Repository = "https://github.com/xiaoCarl/gems-analyzer"
Documentation = "https://github.com/xiaoCarl/gems-analyzer#readme"
"Bug Tracker" = "https://github.com/xiaoCarl/gems-analyzer/issues"

[project.scripts]
gems-analyzer = "scripts.gems-analyzer:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gems*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.9.4",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
